# dl_pytorch_rust_challenge

./: .gitignore  Cargo.toml  README.md  ndarray.ipynb
and_perceptron/: Cargo.toml
and_perceptron/src/: main.rs
cross-entropy/: Cargo.toml  README.md
cross-entropy/src/: main.rs
deep-learning/: package.json
deep-learning/src-tauri/: Cargo.toml  tauri.conf.json
deep-learning/src-tauri/src/: main.rs
fashion-mnist/: Cargo.toml
fashion-mnist/src/: data.rs  dataset.rs  main.rs  model.rs  train.rs  visualization.rs
gradient-descent/: Cargo.toml  README.md  data_demo.csv
gradient-descent/src/: data.rs  main.rs  model.rs  plot.rs  synthetic_data_generator.rs  train.rs
matrix-multiplication/: Cargo.toml
matrix-multiplication/src/: main.rs
my_burn_app/: Cargo.toml
my_burn_app/src/: main.rs
neural-networks/: Cargo.toml
neural-networks/src/: data.rs  main.rs  model.rs  train.rs
not_perceptron/: Cargo.toml
not_perceptron/src/: main.rs
perceptron-algorithm/: Cargo.toml  README.md  data.csv
perceptron-algorithm/src/: main.rs
perceptron-guesser/: Cargo.toml  README.md  StringEqualityCheck.rs
perceptron-guesser/src/: main.rs
single-layer-nn/: Cargo.toml
single-layer-nn/src/: main.rs
softmax/: Cargo.toml  README.md
softmax/src/: main.rs
student-admissions/: Cargo.toml  README.md
student-admissions/src/: data.rs  main.rs  model.rs  plot.rs  train.rs
