[workspace]
resolver = "2"

members = [
    "perceptron-guesser",
    "perceptron-algorithm", 
    "softmax", "cross-entropy",
    "my_burn_app",
    "gradient-descent",
    "student-admissions", "single-layer-nn", "matrix-multiplication",
]

[profile.release]
panic = 'abort'
strip = true


[workspace.dependencies]
# Other workspace dependencies...
burn = { version = "0.17.0", default-features = false, features = ["std", "ndarray", "autodiff", "train", "metrics", "webgpu"] }
plotters = "0.3"        # or whatever the latest 0.3.x is
plotters-backend = "0.3"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] } # Specify common features like 'derive' here
csv = "1.1"
tokio = { version = "1", features = ["full"] }
rand = "0.8.5"
rand_distr  = "0.4"
