[package]
name = "gradient-descent"
version = "0.1.0"
edition = "2021"

[dependencies]
burn     = { workspace = true }
plotters = { workspace = true }
serde    = { workspace = true, features = ["derive"] }
csv      = { workspace = true }
anyhow   = { workspace = true }
rand = "0.8.5"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }