[package]
name = "student-admissions"
version = "0.1.0"
edition = "2024"

[dependencies]
plotters = { workspace = true }
serde    = { workspace = true, features = ["derive"] }
csv      = { workspace = true }
anyhow   = { workspace = true }
tokio =  { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }